[gd_scene load_steps=19 format=3 uid="uid://dnwjijxqcg7il"]

[ext_resource type="Script" path="res://Components/transfer_modal.gd" id="1_4hc1p"]
[ext_resource type="Texture2D" uid="uid://po7672807uk" path="res://Resources/Icons/confirm-icon.png" id="1_r2d2l"]
[ext_resource type="StyleBox" uid="uid://swwmbq60e0jw" path="res://Resources/CustomResource/SignInButton.tres" id="2_q41s3"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_j3ygg"]
bg_color = Color(0, 0, 0, 0.847059)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_juile"]
bg_color = Color(0.0705882, 0.054902, 0.14902, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_size = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tt1bj"]
content_margin_left = 10.0
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.878431, 0.223529, 0.992157, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_i8axk"]
content_margin_left = 10.0
content_margin_right = 10.0
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.164706, 0.152941, 0.235294, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pkia7"]
content_margin_left = 20.0
content_margin_right = 10.0
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.164706, 0.152941, 0.235294, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cx51l"]
content_margin_left = 10.0
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.878431, 0.223529, 0.992157, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ypu32"]
content_margin_left = 10.0
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.164706, 0.152941, 0.235294, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kq37o"]
bg_color = Color(0.0430392, 0.0430392, 0.0430392, 0.827451)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8sfkx"]
bg_color = Color(0.388235, 0.270588, 0.929412, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vgkgs"]
bg_color = Color(0.878431, 0.223529, 0.992157, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_emxvw"]
content_margin_left = 10.0
bg_color = Color(0, 0, 0, 0.658824)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.164706, 0.152941, 0.235294, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kukf6"]
bg_color = Color(0, 0, 0, 0.890196)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_oig2s"]
bg_color = Color(0, 0, 0, 0.658824)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cwys2"]
bg_color = Color(0, 0, 0, 0.890196)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sbrmj"]
bg_color = Color(0, 0, 0, 0.890196)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="TransferModal" type="Panel"]
z_index = 2
offset_right = 1920.0
offset_bottom = 1080.0
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_j3ygg")
script = ExtResource("1_4hc1p")

[node name="Panel" type="Panel" parent="."]
custom_minimum_size = Vector2(1200, 0)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.1875
anchor_top = 0.0833333
anchor_right = 0.8125
anchor_bottom = 0.916667
offset_left = 250.0
offset_right = -250.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_juile")
metadata/_edit_use_anchors_ = true

[node name="HBoxContainer" type="HBoxContainer" parent="Panel"]
custom_minimum_size = Vector2(562, 414)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -568.0
offset_top = -430.0
offset_right = 567.0
offset_bottom = 430.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/HBoxContainer"]
custom_minimum_size = Vector2(0, 169)
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 0

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="Label" type="Label" parent="Panel/HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 1
theme_override_colors/font_color = Color(0.878431, 0.223529, 0.992157, 1)
theme_override_font_sizes/font_size = 30
text = "Transfer Card to Address "
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureRect" type="TextureRect" parent="Panel/HBoxContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(42, 42)
layout_mode = 2
texture = ExtResource("1_r2d2l")
expand_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 10

[node name="HBoxContainer" type="VBoxContainer" parent="Panel/HBoxContainer/VBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2
size_flags_vertical = 3

[node name="ErrorContainer" type="VBoxContainer" parent="Panel/HBoxContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 3

[node name="Spacer" type="HBoxContainer" parent="Panel/HBoxContainer/VBoxContainer/VBoxContainer/HBoxContainer/ErrorContainer"]
custom_minimum_size = Vector2(0, 15)
layout_mode = 2

[node name="ConfirmationContainer" type="VBoxContainer" parent="Panel/HBoxContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Spacer" type="HBoxContainer" parent="Panel/HBoxContainer/VBoxContainer/VBoxContainer/HBoxContainer/ConfirmationContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/HBoxContainer/VBoxContainer/VBoxContainer/HBoxContainer/ConfirmationContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 40
alignment = 1

[node name="UploadedImage" type="TextureRect" parent="Panel/HBoxContainer/VBoxContainer/VBoxContainer/HBoxContainer/ConfirmationContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(310.59, 480)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
expand_mode = 1
stretch_mode = 5

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/HBoxContainer/VBoxContainer/VBoxContainer/HBoxContainer/ConfirmationContainer/HBoxContainer"]
custom_minimum_size = Vector2(777, 0)
layout_mode = 2

[node name="HBoxContainer19" type="HBoxContainer" parent="Panel/HBoxContainer/VBoxContainer/VBoxContainer/HBoxContainer/ConfirmationContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="Panel/HBoxContainer/VBoxContainer/VBoxContainer/HBoxContainer/ConfirmationContainer/HBoxContainer/VBoxContainer/HBoxContainer19"]
custom_minimum_size = Vector2(168, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.929412, 0.890196, 0.988235, 0.745098)
theme_override_font_sizes/font_size = 24
text = "Card Name:"

[node name="CardNameLabel" type="Label" parent="Panel/HBoxContainer/VBoxContainer/VBoxContainer/HBoxContainer/ConfirmationContainer/HBoxContainer/VBoxContainer/HBoxContainer19"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.929412, 0.890196, 0.988235, 0.745098)
theme_override_font_sizes/font_size = 24

[node name="HBoxContainer24" type="HBoxContainer" parent="Panel/HBoxContainer/VBoxContainer/VBoxContainer/HBoxContainer/ConfirmationContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="Panel/HBoxContainer/VBoxContainer/VBoxContainer/HBoxContainer/ConfirmationContainer/HBoxContainer/VBoxContainer/HBoxContainer24"]
custom_minimum_size = Vector2(168, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.929412, 0.890196, 0.988235, 0.745098)
theme_override_font_sizes/font_size = 24
text = "Token ID:"

[node name="TokenIDLabel" type="LineEdit" parent="Panel/HBoxContainer/VBoxContainer/VBoxContainer/HBoxContainer/ConfirmationContainer/HBoxContainer/VBoxContainer/HBoxContainer24"]
unique_name_in_owner = true
custom_minimum_size = Vector2(168, 34)
layout_mode = 2
size_flags_horizontal = 5
size_flags_vertical = 0
theme_override_font_sizes/font_size = 22
theme_override_styles/focus = SubResource("StyleBoxFlat_tt1bj")
theme_override_styles/read_only = SubResource("StyleBoxFlat_i8axk")
theme_override_styles/normal = SubResource("StyleBoxFlat_pkia7")
placeholder_text = "0"
alignment = 2
editable = false
caret_blink = true

[node name="HBoxContainer20" type="HBoxContainer" parent="Panel/HBoxContainer/VBoxContainer/VBoxContainer/HBoxContainer/ConfirmationContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="Panel/HBoxContainer/VBoxContainer/VBoxContainer/HBoxContainer/ConfirmationContainer/HBoxContainer/VBoxContainer/HBoxContainer20"]
custom_minimum_size = Vector2(168, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.929412, 0.890196, 0.988235, 0.745098)
theme_override_font_sizes/font_size = 24
text = "To Address:"

[node name="WalletAddress" type="LineEdit" parent="Panel/HBoxContainer/VBoxContainer/VBoxContainer/HBoxContainer/ConfirmationContainer/HBoxContainer/VBoxContainer/HBoxContainer20" groups=["TransferItemFields"]]
unique_name_in_owner = true
custom_minimum_size = Vector2(168, 34)
layout_mode = 2
size_flags_horizontal = 5
size_flags_vertical = 0
theme_override_font_sizes/font_size = 22
theme_override_styles/focus = SubResource("StyleBoxFlat_cx51l")
theme_override_styles/normal = SubResource("StyleBoxFlat_pkia7")
placeholder_text = "0x..."
alignment = 2
caret_blink = true

[node name="FormatLabel1" type="Label" parent="Panel/HBoxContainer/VBoxContainer/VBoxContainer/HBoxContainer/ConfirmationContainer/HBoxContainer/VBoxContainer/HBoxContainer20"]
unique_name_in_owner = true
custom_minimum_size = Vector2(168, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.929412, 0.890196, 0.988235, 0.745098)
theme_override_font_sizes/font_size = 16
text = "Enter the address of the receiver"

[node name="HBoxContainer21" type="HBoxContainer" parent="Panel/HBoxContainer/VBoxContainer/VBoxContainer/HBoxContainer/ConfirmationContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="Panel/HBoxContainer/VBoxContainer/VBoxContainer/HBoxContainer/ConfirmationContainer/HBoxContainer/VBoxContainer/HBoxContainer21"]
custom_minimum_size = Vector2(168, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.929412, 0.890196, 0.988235, 0.745098)
theme_override_font_sizes/font_size = 24
text = "Amount:"

[node name="AmountField" type="LineEdit" parent="Panel/HBoxContainer/VBoxContainer/VBoxContainer/HBoxContainer/ConfirmationContainer/HBoxContainer/VBoxContainer/HBoxContainer21" groups=["TransferItemFields"]]
unique_name_in_owner = true
custom_minimum_size = Vector2(168, 34)
layout_mode = 2
size_flags_horizontal = 5
size_flags_vertical = 0
theme_override_font_sizes/font_size = 22
theme_override_styles/focus = SubResource("StyleBoxFlat_cx51l")
theme_override_styles/normal = SubResource("StyleBoxFlat_pkia7")
text = "1"
placeholder_text = "1"
alignment = 2
caret_blink = true

[node name="FormatLabel2" type="Label" parent="Panel/HBoxContainer/VBoxContainer/VBoxContainer/HBoxContainer/ConfirmationContainer/HBoxContainer/VBoxContainer/HBoxContainer21"]
unique_name_in_owner = true
custom_minimum_size = Vector2(168, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.929412, 0.890196, 0.988235, 0.745098)
theme_override_font_sizes/font_size = 16
text = "Enter amount to be transferrerd"

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/HBoxContainer/VBoxContainer/VBoxContainer/HBoxContainer/ConfirmationContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 10
alignment = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/HBoxContainer/VBoxContainer/VBoxContainer/HBoxContainer/ConfirmationContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="ErrorMessageLabel" type="Label" parent="Panel/HBoxContainer/VBoxContainer/VBoxContainer/HBoxContainer/ConfirmationContainer/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
modulate = Color(0.862745, 0, 0, 1)
custom_minimum_size = Vector2(168, 0)
layout_mode = 2
size_flags_vertical = 1
theme_override_colors/font_color = Color(0.929412, 0.890196, 0.988235, 0.745098)
theme_override_font_sizes/font_size = 24
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/HBoxContainer/VBoxContainer/VBoxContainer/HBoxContainer/ConfirmationContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/HBoxContainer/VBoxContainer/VBoxContainer/HBoxContainer/ConfirmationContainer/VBoxContainer/VBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="Panel/HBoxContainer/VBoxContainer/VBoxContainer/HBoxContainer/ConfirmationContainer/VBoxContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_font_sizes/font_size = 20
text = "Please review the wallet address before transferring"
horizontal_alignment = 2
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/HBoxContainer/VBoxContainer/VBoxContainer/HBoxContainer/ConfirmationContainer/VBoxContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="Panel/HBoxContainer/VBoxContainer/VBoxContainer/HBoxContainer/ConfirmationContainer/VBoxContainer/VBoxContainer/VBoxContainer/HBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_font_sizes/font_size = 20
text = "Time left:  "
horizontal_alignment = 2
vertical_alignment = 1

[node name="TimeLeftLabel" type="Label" parent="Panel/HBoxContainer/VBoxContainer/VBoxContainer/HBoxContainer/ConfirmationContainer/VBoxContainer/VBoxContainer/VBoxContainer/HBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_font_sizes/font_size = 20
horizontal_alignment = 2
vertical_alignment = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="Panel/HBoxContainer/VBoxContainer/VBoxContainer/HBoxContainer/ConfirmationContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2

[node name="SubmitButton" type="Button" parent="Panel/HBoxContainer/VBoxContainer/VBoxContainer/HBoxContainer/ConfirmationContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 40)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 20
theme_override_styles/focus = SubResource("StyleBoxFlat_ypu32")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxFlat_kq37o")
theme_override_styles/hover = SubResource("StyleBoxFlat_8sfkx")
theme_override_styles/pressed = SubResource("StyleBoxFlat_vgkgs")
theme_override_styles/normal = ExtResource("2_q41s3")
text = "SUBMIT"

[node name="HBoxContainer2" type="HBoxContainer" parent="Panel/HBoxContainer/VBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2

[node name="CancelButton" type="Button" parent="Panel/HBoxContainer/VBoxContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 40)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 20
theme_override_styles/focus = SubResource("StyleBoxFlat_emxvw")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxFlat_kukf6")
theme_override_styles/hover = SubResource("StyleBoxFlat_oig2s")
theme_override_styles/pressed = SubResource("StyleBoxFlat_cwys2")
theme_override_styles/normal = SubResource("StyleBoxFlat_sbrmj")
text = "CANCEL"

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="text_changed" from="Panel/HBoxContainer/VBoxContainer/VBoxContainer/HBoxContainer/ConfirmationContainer/HBoxContainer/VBoxContainer/HBoxContainer20/WalletAddress" to="." method="_on_wallet_address_text_changed"]
[connection signal="text_changed" from="Panel/HBoxContainer/VBoxContainer/VBoxContainer/HBoxContainer/ConfirmationContainer/HBoxContainer/VBoxContainer/HBoxContainer21/AmountField" to="." method="_on_amount_field_text_changed"]
[connection signal="pressed" from="Panel/HBoxContainer/VBoxContainer/VBoxContainer/HBoxContainer2/CancelButton" to="." method="_on_cancel_button_pressed"]
